CLassQuery finished with sorting Revamped language versioned fields to be available for sorting (keyword subproperty) More unit tests Some sonarqube issues